openshift-templates/curr-convert3-DeploymentConfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: '2019-04-01T11:19:14Z'
  generation: 2
  labels:
    app: curr-convert3
  name: curr-convert3
  namespace: myproject
  resourceVersion: '29847'
  selfLink: >-
    /apis/apps.openshift.io/v1/namespaces/myproject/deploymentconfigs/curr-convert3
  uid: fb70d10d-546f-11e9-83b1-02d97b035ff8
spec:
  replicas: 1
  selector:
    app: curr-convert3
    deploymentconfig: curr-convert3
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: curr-convert3
        deploymentconfig: curr-convert3
    spec:
      containers:
        - image: >-
            nexusvp.mitralabs.co.uk:8082/curr-convert
          imagePullPolicy: IfNotPresent
          name: curr-convert3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - curr-convert3
        from:
          kind: ImageStreamTag
          name: 'curr-convert3:latest'
          namespace: myproject
        lastTriggeredImage: >-
          nexusvp.mitralabs.co.uk:8082/curr-convert
      type: ImageChange
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: '2019-04-01T11:19:19Z'
      lastUpdateTime: '2019-04-01T11:19:19Z'
      message: Deployment config has minimum availability.
      status: 'True'
      type: Available
    - lastTransitionTime: '2019-04-01T11:19:17Z'
      lastUpdateTime: '2019-04-01T11:19:20Z'
      message: replication controller "curr-convert3-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: 'True'
      type: Progressing
  details:
    causes:
      - type: ConfigChange
    message: config change
  latestVersion: 1
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
