openshift-templates/curr-convert_Edited.yaml
apiVersion: mitrai-vpb/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: Charmi
  creationTimestamp: '2019-04-01T05:54:06Z'
  generation: 2
  labels:
    app: curr-convert1-charmi
  name: curr-convert1-charmi
  namespace: myproject-charmi
  resourceVersion: '2599'
  selfLink: >-
    /apis/apps.openshift.io/v1/namespaces/myproject/deploymentconfigs/curr-convert1
  uid: 8f560529-5442-11e9-83b1-02d97b035ff8
spec:
  replicas: 1
  selector:
    app: curr-convert1-charmi
    deploymentconfig: curr-convert1-charmi
  strategy:
        : 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: curr-convert1
        deploymentconfig: curr-convert1
    spec:
      containers:
        - image: >-
            nexusvp.mitralabs.co.uk:8082/curr-convert
          imagePullPolicy: Always
          name: curr-convert1-charmi
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - curr-convert1
        from:
          kind: ImageStreamTag
          name: 'curr-convert1-charmi:latest'
          namespace: myproject
        lastTriggeredImage: >-
          nexusvp.mitralabs.co.uk:8082/curr-convert
      type: ImageChange
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: '2019-04-01T05:54:11Z'
      lastUpdateTime: '2019-04-01T05:54:11Z'
      message: Deployment config has minimum availability.
      status: 'True'
      type: Available
    - lastTransitionTime: '2019-04-01T05:54:08Z'
      lastUpdateTime: '2019-04-01T05:54:12Z'
      message: replication controller "curr-convert1-charmi-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: 'True'
      type: Progressing
  details:
    causes:
      - type: ConfigChange
    message: config change
  latestVersion: 1
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
