openshift-templates/curr-convert3-Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  creationTimestamp: '2019-04-01T11:25:26Z'
  labels:
    app: curr-convert3
  name: curr-convert3
  namespace: myproject
  resourceVersion: '30418'
  selfLink: /apis/route.openshift.io/v1/namespaces/myproject/routes/curr-convert3
  uid: d8f4c883-5470-11e9-83b1-02d97b035ff8
spec:
  host: curr-convert3-myproject.13.233.195.158.nip.io
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: curr-convert3
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: '2019-04-01T11:25:26Z'
          status: 'True'
          type: Admitted
      host: curr-convert3-myproject.13.233.195.158.nip.io
      routerName: router
      wildcardPolicy: None
